improved mobile styles

--- a/teamwin/templates/landing.html
+++ b/teamwin/templates/landing.html
@@ -123,6 +123,7 @@
     }
     body {
       background: url('{{STATIC_URL}}landing/background_mobile.jpg') center center no-repeat;
+      background-size: cover;
     }
     .col-sm-6 {
       text-align: center;
@@ -130,6 +131,7 @@
     h1 {
       width: 80%;
       text-align: center;
+      font-size: 17px;
     }
     .screens {
       float: none !important;
@@ -145,6 +147,8 @@
     .footer {
       position: relative !important;
       height: auto !important;
+      background-color: transparent !important;
+      padding-top: 30px !important;
     }
     .yellow, .red {
       display: block;
