fixed app store link in landing page

--- a/teamwin/templates/landing.html
+++ b/teamwin/templates/landing.html
@@ -193,7 +193,7 @@
         <div class="col-sm-6">
           <img class="logo" src="{{STATIC_URL}}landing/logo_white.png" width="195">
           <h1>Pronostica resultados deportivos con tus amigos y consigue fantásticos premios.</h1>
-          <a class="app_store_btn png-shadow" href="https://appstore.com/teamwin?referrer={{request.GET.utm_medium}}_{{request.GET.utm_source}}_{{request.GET.utm_campaign}}">
+          <a class="app_store_btn png-shadow" href="https://itunes.apple.com/us/app/teamwin/id1023751394?referrer={{request.GET.utm_medium}}_{{request.GET.utm_source}}_{{request.GET.utm_campaign}}">
             <img src="{{STATIC_URL}}landing/app_store.png" width="135">
           </a>
           <a class="google_play_btn png-shadow" href="https://play.google.com/store/apps/details?id=com.dareyoo.teamwin&referrer={{request.GET.utm_medium}}_{{request.GET.utm_source}}_{{request.GET.utm_campaign}}">
